--- a/order-status.html
+++ b/order-status.html
@@ -14,7 +14,7 @@
         <p class="order-id" style="font-size: 14px; color: #666; margin-top: 20px;">
             Order Reference: <span id="displayOrderId"></span>
         </p>
-        <a href="/" class="cta-button" style="display: inline-block; margin-top: 20px;">
+        <a href="./index.html" class="cta-button" style="display: inline-block; margin-top: 20px;">
             Return to Homepage
         </a>
     </div>
