--- a/success.html
+++ b/success.html
@@ -8,7 +8,7 @@
     
     <!-- Add tracking scripts -->
     <script>
-        // Parse URL parameters
+        // Parse URL parameters and handle tracking
         const urlParams = new URLSearchParams(window.location.search);
         const orderId = urlParams.get('orderId');
         
@@ -35,15 +35,14 @@
         <p class="order-id" style="font-size: 14px; color: #666; margin-top: 20px;">
             Order ID: <span id="displayOrderId"></span>
         </p>
-        <a href="/" class="cta-button" style="display: inline-block; margin-top: 20px;">
+        <a href="./index.html" class="cta-button" style="display: inline-block; margin-top: 20px;">
             Return to Homepage
         </a>
     </div>
 
     <script>
-        // Display order ID if available
+        // Display order ID using the already defined orderId variable
         const orderIdSpan = document.getElementById('displayOrderId');
-        const orderId = new URLSearchParams(window.location.search).get('orderId');
         if (orderIdSpan && orderId) {
             orderIdSpan.textContent = orderId;
         }
