--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Fido FreshAir - The #1 Veterinary Solution for Pet Anxiety</title>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8Q970BHHYJ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-8Q970BHHYJ'); // Your Measurement ID
+    </script>
     <script type="text/javascript" src="https://web.squarecdn.com/v1/square.js"></script>
 </head>
 <body>
