--- a/index.html
+++ b/index.html
@@ -700,6 +700,12 @@
     </script>
     <script>
         async function startCheckout(packageType) {
+            // Select the button that triggered the checkout
+            const button = document.querySelector(`button[onclick="startCheckout('${packageType}')"]`);
+            const originalText = button.innerText; // Store the original button text
+            button.innerText = "Loading..."; // Change button text to loading
+            button.disabled = true; // Disable the button to prevent multiple clicks
+    
             try {
                 const response = await fetch('https://fido-freshair.netlify.app/.netlify/functions/create-checkout-session', {
                     method: 'POST',
@@ -715,6 +721,11 @@
                 }
             } catch (error) {
                 console.error('Error starting checkout:', error);
+                button.innerText = "Try Again"; // Show error message on button
+            } finally {
+                // Revert button text and re-enable button only if no redirect occurred
+                button.innerText = originalText;
+                button.disabled = false;
             }
         }
     </script>
