Lots and lots of changes

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                         <p>Simply spray in your pet's environment or on bedding, carriers, or clothing. Each 4oz bottle provides approximately 120 applications. Safe and effective for both cats and dogs of all breeds.</p>
                     </div>
                     
-                    <a href="#checkout" class="cta-button">
+                    <a href="javascript:void(0);" onclick="startCheckout('3-month')" class="cta-button">
                         Start Your Pet's Journey to Peace
                         <span class="button-subtitle">Save 45% + Claim Your Free Bonuses Now!</span>
                     </a>
@@ -587,7 +587,7 @@
                     <span class="stock-warning">Only 7 Discount Packages Remaining</span>
                 </div>
                 
-                <a href="#checkout" class="cta-button">
+                <a href="javascript:void(0);" onclick="startCheckout('3-month')" class="cta-button">
                     Give Your Pet the Gift of Peace Today
                     <span class="button-subtitle">Free Priority Shipping | 90-Day Guarantee</span>
                 </a>
